tests/fixtures/positive/supply-chain/compile-sdk-mismatch-across-modules/feature/b/build.gradle.kts
plugins {
    id("com.android.library")
    id("org.jetbrains.kotlin.android")
}

android {
    namespace = "com.example.feature.b"
    compileSdk = 34
}
